--- a/css/style.css
+++ b/css/style.css
@@ -640,59 +640,841 @@ header {
   /* fim modal filtragem */
 }
 
+/*definições das fontes*/
+.font-vollkorn {
+  font-family: var(--font-vollkorn);
+}
 
+.font-raleway {
+  font-family: var(--font-raleway);
+}
 
-/* PAGINA PROJETO */
+.f36 {
+  font-size: 36px;
+}
 
+.f24 {
+  font-size: 24px;
+}
 
-/* Botão Voltar */
-.pd-projeto-botao-voltar {
-  background-color: var(--amarelo-pd);
-  font-family: 'Raleway', sans-serif;
+.f18 {
+  font-size: 18px;
+}
+
+.f16 {
+  font-size: 16px;
+}
+
+.f13 {
+  font-size: 13px;
+}
+
+.f12 {
+  font-size: 12px;
+}
+
+.card-perfil {
+  margin-top: 25px;
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 38px;
+  /*quando o header foi adicionado, 25 será a distância do header apra o card*/
 }
 
-.pd-projeto-botao-voltar a {
-  color: var(--cor-bg-pagina);
-  font-size: 22px;
-  text-align: center;
+.texto-abraco {
+  /*remover bordas de campos de texto*/
+  margin: 0;
+  padding: 0;
+  border: none;
+  line-height: 1;
+  display: block;
+  width: auto;
+  max-width: 100%;
 }
 
-.botao-voltar-projeto {
-  width: 24px;
-  height: 24px;
+.entre-linhas {
+  line-height: 21px;
+  /*16px (fs) + 5px (espaçamento)*/
+}
+
+/*elementos do card de perfil da página de perfil*/
+.conteudo-card-perfil {
+  position: relative;
+  /*permite que o retângulo amarelo tenha position absolute (h80 sempre)*/
+  width: 87.5vw;
+  max-width: 437.5px;
+  /*máximo = iphone 16*/
+  height: 503px;
+  background-color: var(--cor-bg-card);
+  border-radius: 10px;
+  min-height: fit-content;
+}
+
+.retangulo-amarelo {
   position: absolute;
-  left: 0%;
-  margin-left: 2rem;
+  /*fixa a altura em 80px, seguindo o padrão do figma*/
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 437.5px;
+  height: 80px;
+  /*altura fixada*/
+  background-color: var(--amarelo-pd);
+  border-radius: 10px 10px 0px 0px;
+  z-index: 1;
+  /*ficará abaixo da foto de perfil*/
 }
 
-.pd-projeto-botao-voltar a span {
-  vertical-align: middle;
-  margin: auto;
+.foto-usuario {
+  position: relative;
+  z-index: 2;
+  /*ACIMA do retângulo amarelo*/
+  width: 40.625vw;
+  max-width: 130px;
+  height: auto;
+  margin-top: 10px;
+  margin-bottom: 18px;
+  /*24px - 6px = distância da foto pro nome. 6px de margem aproximadamente entre o texto e o fim do bloco do texto*/
 }
 
-.pd-projeto-botao-voltar .bi {
-  font-size: 1.2em;
+.nome {
+  font-size: clamp(24px, 7.5vw, 37.5px);
+  font-weight: 600;
+  /*semibold (sem classe definida no bootstrap)*/
+  margin-bottom: 7px ! important;
+  ;
+}
+
+.descricao {
+  font-size: clamp(16px, 5vw, 20px);
+  font-weight: 400;
+  max-height: 69px;
+  overflow: hidden;
+  margin-left: clamp(14px, 4.375vw, 21.8px) !important;
+  margin-right: clamp(14px, 4.375vw, 21.8px) !important;
+  margin-bottom: 25px !important;
+}
+
+.img-lider {
+  /*emoticon do supervisor ou responsável*/
+  width: 35px;
+  height: 30px;
+}
+
+.lideres {
+  margin-bottom: 24px !important;
+  /*espaçamento entre o bloco de líderes e o botão*/
+}
+
+#primeiro-lider {
+  margin-bottom: 16px;
+  /*espaçamento entre os líderes*/
+}
+
+.lider {
+  font-size: clamp(12px, 3.75vw, 18px);
+  gap: 10px;
+  align-items: end;
+}
+
+.nome-lider {
+  font-weight: 300;
+}
+
+.espaco-cargo-nome {
+  /*espaço entre SUPERVISOR e TIAGO MARTINS*/
+  gap: 5px;
+}
+
+.baixar-curriculo-texto {
+  display: none;
+}
+
+.baixar-curriculo {
+  background-color: var(--amarelo-pd);
+  width: 19.68vw;
+  max-width: 98px;
+  height: 37px;
+  margin-bottom: 18px;
+  border-radius: 7px;
+  border: none;
+  border-style: none;
+}
+
+.icons-sociais {
+  display: flex;
+  flex-direction: row;
+  gap: 47px;
+  margin-bottom: 22px;
+}
+
+.icon-social {
+  width: 30px;
+  height: 30px;
+}
+
+/*VERSÃO DESKTOP*/
+@media screen and (min-width: 720px) {
+  .card-perfil {
+    display: block;
+    margin-top: 5.32vh;
+    /*distância do header*/
+    margin-left: clamp(20px, 8.3vw, 120px);
+    /*distância da margem da página*/
+  }
+
+  .entre-linhas {
+    line-height: 21px;
+    /*18px (fs) + 5px (espaçamento)*/
+  }
+
+  .conteudo-card-perfil {
+    position: relative;
+    overflow: hidden;
+    width: 28.81vw;
+    max-width: 415px;
+    height: fit-content;
+    /*impedir overflow*/
+    border-radius: 32px 0px 32px 0px;
+  }
+
+  .retangulo-amarelo {
+    width: 28.82vw;
+    max-width: 415px;
+    height: clamp(10px, 10.90vw, 157px);
+    /*apesar de ser height, usamos vw de parâmtro pois só varia de acordo com width*/
+    border-radius: 32px 0px 0px 0px;
+  }
+
+  .foto-usuario {
+    width: 13.54vw;
+    max-width: 195px;
+    height: auto;
+    margin-top: 35px;
+    margin-bottom: 25px;
+  }
+
+  .nome {
+    /*clamp(minimo, porc, max)*/
+    /*36px/ 1440px -> trunca em 24px e 36px*/
+    font-size: clamp(24px, 2.5vw, 36px);
+    font-weight: 600;
+    /*semibold (sem classe definida no bootstrap)*/
+    margin-bottom: 11px ! important;
+    ;
+  }
+
+  .descricao {
+    font-size: clamp(16px, 1.25vw, 18px);
+    max-height: 85px;
+    /*escolha de limite -> 79px*/
+    margin-left: 2.77vw !important;
+    margin-right: 2.77vw !important;
+    margin-bottom: 46px !important;
+  }
+
+  .img-lider {
+    /*emoticon do supervisor ou responsável*/
+    width: 1.73vw;
+    max-width: 25px;
+    height: auto;
+  }
+
+  .lideres {
+    display: flex;
+    gap: clamp(0px, 1.31vw, 19px);
+    align-items: center;
+    margin-bottom: 47px !important;
+    /*do mobile até o desktop (porcentagem do desktop)*/
+    /*espaçamento entre o bloco de líderes e o botão*/
+  }
+
+  #primeiro-lider {
+    margin-bottom: 0px;
+    /*espaçamento entre os líderes*/
+  }
+
+  .lider {
+    font-size: clamp(12px, 0.90vw, 13px);
+    gap: 4px;
+    align-items: center;
+  }
+
+  .espaco-cargo-nome {
+    gap: 2px;
+    /*MANTIVE 2px*/
+  }
+
+  .espaco-cargo-nome p {
+    flex: 0 0 auto;
+  }
+
+  .baixar-curriculo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    max-width: 267px;
+    width: 18.54vw;
+    max-height: 37px;
+    margin-bottom: 42px;
+    border-radius: 7px;
+    border: 2px solid var(--preto);
+  }
+
+  .baixar-curriculo-texto {
+    display: flex;
+    font-size: (14px, 1.25vw, 18px);
+  }
+
+  .baixar-curriculo:hover {
+    background-color: var(--preto);
+  }
+
+  .icons-sociais {
+    gap: clamp(28px, 4.59vw, 47px);
+    margin-bottom: 84px;
+  }
+
+  .icon-social {
+    width: clamp(30px, 3.91vw, 40px);
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 500px) and (max-width: 719px) {
+  .conteudo-card-perfil {
+    width: 87.5vw;
+    max-width: 630px;
+  }
+
+  .retangulo-amarelo {
+    width: 100%;
+    max-width: 630px;
+  }
+
+  .baixar-curriculo {
+    max-width: 141px;
+  }
+}
+
+/* Card de projeto da tela perfil */
+
+figcaption {
+  display: none;
+}
+
+#section-card-projeto-tela-perfil {
+  padding-top: 2vh;
+}
+
+@media (min-width: 500px) {
+  #section-card-projeto-tela-perfil {
+    padding-top: 2vh;
+  }
 }
 
 @media (min-width: 720px) {
-  .pd-projeto-botao-voltar {
-    height: 60px;
-  }
-
-  .pd-projeto-botao-voltar a {
-    font-size: 29px;
-  }
-
-  .botao-voltar-projeto {
-    width: 36px;
-    height: 36px;
+  #section-card-projeto-tela-perfil {
+    padding-top: 10vh;
+    margin-left: 4.65vw;
   }
 }
 
+.container-meus-projetos {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 500px) {
+  .container-meus-projetos {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 720px) {
+  .container-meus-projetos {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+}
+
+.container-projetos-compartilhados {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 500px) {
+  .container-projetos-compartilhados {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 720px) {
+  .container-projetos-compartilhados {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+
+.title-meus-projetos {
+  font-family: var(--font-vollkorn);
+  width: 200px;
+  height: 43px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F4BC1D;
+  border-radius: 30px 0 30px 0;
+  padding-left: 0;
+  margin-bottom: 0 !important;
+}
+
+@media (min-width: 500px) {
+  .title-meus-projetos {
+    font-family: var(--font-vollkorn);
+    width: 200px;
+    height: 43px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F4BC1D;
+    border-radius: 30px 0 30px 0;
+    padding-left: 0;
+    margin-bottom: 0 !important;
+  }
+}
+
+@media (min-width: 720px) {
+  .title-meus-projetos {
+    font-family: var(--font-vollkorn);
+    width: 44.37vw;
+    max-width: 639px;
+    height: 74px;
+    font-weight: bold;
+    font-size: clamp(15px, 3.33vw, 48px);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #F4BC1D;
+    border-radius: 30px 0 30px 0;
+    padding-left: 1.5rem;
+    margin-bottom: 0 !important;
+  }
+}
+
+.title-projetos-compartilhados {
+  font-family: var(--font-vollkorn);
+  width: 200px;
+  height: 43px;
+  font-weight: bold;
+  font-size: 0.9375rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F4BC1D;
+  border-radius: 15px 0 15px 0;
+  margin-bottom: 0 !important;
+}
+
+@media (min-width: 500px) {
+  .title-projetos-compartilhados {
+    font-family: var(--font-vollkorn);
+    width: 200px;
+    height: 43px;
+    font-weight: bold;
+    font-size: 0.9375rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F4BC1D;
+    border-radius: 15px 0 15px 0;
+    margin-bottom: 0 !important;
+  }
+}
+
+@media (min-width: 720px) {
+  .title-projetos-compartilhados {
+    font-family: var(--font-vollkorn);
+    width: 44.37vw;
+    max-width: 639px;
+    height: 74px;
+    font-weight: bold;
+    font-size: clamp(15px, 3.33vw, 48px);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #F4BC1D;
+    border-radius: 30px 0 30px 0;
+    padding-left: 1.5rem;
+    margin-bottom: 0 !important;
+  }
+}
+
+.container-card-tela-perfil {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  padding: 14px;
+}
+
+@media (min-width: 500px) {
+  .container-card-tela-perfil {
+    width: 100%;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    padding: 28px 0 16px 0;
+  }
+}
+
+@media (min-width: 720px) {
+  .container-card-tela-perfil {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    justify-content: flex-start;
+    place-items: initial;
+    grid-template-columns: repeat(auto-fit, 21.73vw);
+    gap: 13px;
+    padding: 1.95vh 0 6.64vh 0;
+  }
+}
+
+.card-tela-perfil {
+  width: 243px;
+  height: 326px;
+  display: flex;
+  flex-direction: column;
+  background-color: #161D26;
+  border-radius: 23px 0 20px 0;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+
+@media (min-width: 500px) {
+  .card-tela-perfil {
+    width: 243px;
+    height: 326px;
+    display: flex;
+    flex-direction: column;
+    background-color: #161D26;
+    border-radius: 23px 0 20px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  }
+}
+
+@media (min-width: 720px) {
+  .card-tela-perfil {
+    width: 100%;
+    max-width: 313px;
+    height: 421px;
+    display: flex;
+    flex-direction: column;
+    background-color: #161D26;
+    border-radius: 23px 0 20px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.conteudo-card-tela-perfil {
+  flex: 1;
+  margin-top: 0 !important;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+@media (min-width: 500px) {
+  .conteudo-card-tela-perfil {
+    flex: 1;
+    margin-top: 0 !important;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (min-width: 720px) {
+  .conteudo-card-tela-perfil {
+    flex: 1;
+    margin-top: 0 !important;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+    gap: 1vh;
+    padding-bottom: 1.5vh;
+  }
+}
+
+.img-card-tela-perfil {
+  width: 100%;
+  height: 137px;
+  border-radius: 20px 0 0 0;
+  background-color: #9C9C9C;
+  border-bottom: 1px solid #FFFFFF;
+
+}
+
+@media (min-width: 500px) {
+  .img-card-tela-perfil {
+    width: 100%;
+    height: 137px;
+    border-radius: 20px 0 0 0;
+    background-color: #9C9C9C;
+    border-bottom: 1px solid #FFFFFF;
+
+  }
+}
+
+@media (min-width: 720px) {
+  .img-card-tela-perfil {
+    width: 100%;
+    height: 177px;
+    border-radius: 20px 0 0 0;
+    background-color: #9C9C9C;
+    border-bottom: 1px solid #FFFFFF;
+  }
+}
+
+.figure-card-tela-perfil {
+  width: 100%;
+  height: 137px;
+  margin: 0 !important;
+}
+
+@media (min-width: 500px) {
+  .figure-card-tela-perfil {
+    width: 100%;
+    height: 137px;
+    margin: 0 !important;
+  }
+}
+
+@media (min-width: 720px) {
+  .figure-card-tela-perfil {
+    height: 17.32vh;
+    max-height: 177.4px;
+    margin: 0 !important;
+  }
+}
+
+.titulo-descricao-tela-perfil {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-card-tela-perfil {
+  font-family: var(--font-vollkorn);
+  font-weight: 500;
+  font-size: 1.125rem;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 0 !important;
+}
+
+@media (min-width: 500px) {
+  .title-card-tela-perfil {
+    font-family: var(--font-vollkorn);
+    font-weight: 500;
+    font-size: 1.125rem;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 0 !important;
+  }
+}
+
+@media (min-width: 720px) {
+  .title-card-tela-perfil {
+    font-family: var(--font-vollkorn);
+    font-weight: 500;
+    font-size: clamp(18px, 1.875vw, 27px);
+    color: #FFFFFF;
+    text-transform: none;
+    text-align: center;
+    margin-bottom: 0 !important;
+  }
+}
+
+.descricao-card-tela-perfil {
+  width: 100%;
+  font-family: var(--font-raleway);
+  font-weight: 300;
+  font-size: .625rem;
+  color: #FFFFFF;
+  text-align: center;
+  margin-bottom: 0 !important;
+}
+
+@media (min-width: 500px) {
+  .descricao-card-tela-perfil {
+    width: 95%;
+    font-family: var(--font-raleway);
+    font-weight: 300;
+    font-size: .625rem;
+    color: #FFFFFF;
+    text-align: center;
+  }
+}
+
+@media (min-width: 720px) {
+  .descricao-card-tela-perfil {
+    width: 95%;
+    font-family: var(--font-raleway);
+    font-weight: 300;
+    font-size: clamp(10px, 0.97vw, 14px);
+    color: #FFFFFF;
+    text-align: center;
+  }
+}
+
+.badges-card-projeto {
+  width: 95%;
+  height: 59px;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 7px 10px;
+}
+
+@media (min-width: 500px) {
+  .badges-card-projeto {
+    width: 95%;
+    height: 37px;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 7px 10px;
+  }
+}
+
+@media (min-width: 720px) {
+  .badges-card-projeto {
+    width: 19.30vw;
+    max-width: 278px;
+    height: 82px;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 1.26vh 0.83vw;
+  }
+
+  .badges-card-projeto img {
+    height: 1.78vw;
+    max-height: 18.3px;
+  }
+}
+
+.link-ver-mais {
+  text-decoration: none;
+}
+
+.btn-ver-mais {
+  width: 130px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  background-color: #F4BC1D;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--font-raleway);
+  font-weight: bold;
+  font-size: .875rem;
+  margin-bottom: 0 !important;
+  cursor: pointer;
+}
+
+@media (min-width: 500px) {
+  .btn-ver-mais {
+    width: 130px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background-color: #F4BC1D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--font-raleway);
+    font-weight: bold;
+    font-size: .875rem;
+    margin-bottom: 0 !important;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: 720px) {
+  .btn-ver-mais {
+    width: 14.58vw;
+    max-width: 210px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    background-color: #F4BC1D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--font-raleway);
+    font-weight: 600;
+    font-size: clamp(14px, 1.25vw, 18px);
+    margin-bottom: 0 !important;
+    cursor: pointer;
+    transition: .3s ease;
+  }
+
+  .btn-ver-mais:hover {
+    background-color: #000000;
+    color: #F4BC1D;
+  }
+}
+
+/* fim do Card de projeto da tela perfil */
 
 /* MAIN - Projeto */
 
@@ -1050,8 +1832,58 @@ figure {
   margin: 2px 2px;
 }
 
-
 /*FIM DO CONTEÚDO DE PERFIL*/
+
+/* PAGINA PROJETO */
+
+
+/* Botão Voltar */
+.pd-projeto-botao-voltar {
+  background-color: var(--amarelo-pd);
+  font-family: 'Raleway', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 38px;
+}
+
+.pd-projeto-botao-voltar a {
+  color: var(--cor-bg-pagina);
+  font-size: 22px;
+  text-align: center;
+}
+
+.botao-voltar-projeto {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 0%;
+  margin-left: 2rem;
+}
+
+.pd-projeto-botao-voltar a span {
+  vertical-align: middle;
+  margin: auto;
+}
+
+.pd-projeto-botao-voltar .bi {
+  font-size: 1.2em;
+}
+
+@media (min-width: 720px) {
+  .pd-projeto-botao-voltar {
+    height: 60px;
+  }
+
+  .pd-projeto-botao-voltar a {
+    font-size: 29px;
+  }
+
+  .botao-voltar-projeto {
+    width: 36px;
+    height: 36px;
+  }
+}
 
 @media (max-width: 719px) {
   .modal-nav-btn.prev {
@@ -1216,11 +2048,6 @@ figure {
     padding: 0.5rem 0.25rem;
   }
 
-
-
-
-
-
   /*BANNERS CARROSSEL*/
 
   #carrossel-mobile {
@@ -1375,9 +2202,6 @@ figure {
     gap: 0;
     padding: 0.5rem 0.25rem;
   }
-
-
-
 }
 
 /*BANNERS CARROSSEL*/
@@ -1500,7 +2324,6 @@ figure {
   }
 
 }
-
 .container,
 .container-fluid,
 .container-lg,
@@ -1509,7 +2332,6 @@ figure {
 .container-xl,
 .container-xxl {
   --bs-gutter-x: 0 !important;
-
 }
 
 /*FIM CARROSSEL*/
@@ -1729,5 +2551,4 @@ figure {
     height: 4.68vw;
     max-height: 24px;
   }
-
 }
