--- a/css/style.css
+++ b/css/style.css
@@ -673,6 +673,13 @@ header {
   font-size: 12px;
 }
 
+.card-perfil-e-cards-informacoes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
 .card-perfil {
   margin-top: 25px;
   display: flex;
@@ -814,12 +821,22 @@ header {
 
 /*VERSÃO DESKTOP*/
 @media screen and (min-width: 720px) {
+
+  .card-perfil-e-cards-informacoes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 35px;
+  }
+
   .card-perfil {
     display: block;
-    margin-top: 5.32vh;
     /*distância do header*/
-    margin-left: clamp(20px, 8.3vw, 120px);
+    margin: 0 !important;
     /*distância da margem da página*/
+
   }
 
   .entre-linhas {
@@ -1680,7 +1697,9 @@ figcaption {
   flex-direction: column;
   align-items: center;
   gap: 8px;
-  margin-top: 25px;
+  margin-top: 0px;
+  width: 52.09vw;
+  max-width: 751px;
 }
 
 .article-quemSou-Formação {
@@ -1761,7 +1780,7 @@ figcaption {
   height: auto;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  gap: 5px;
   margin-top: 2px;
 
 }
@@ -2324,6 +2343,7 @@ figure {
   }
 
 }
+
 .container,
 .container-fluid,
 .container-lg,
@@ -2336,7 +2356,7 @@ figure {
 
 /*FIM CARROSSEL*/
 
-/*PRECISA SER CORRIGIDO! VARIOS MEDIA SCREEN COM O MESMO FORMATO*/
+
 @media screen and (min-width: 720px) {
   .titulos-artigos {
     font-weight: 500;
@@ -2350,22 +2370,22 @@ figure {
     flex-direction: column;
     align-items: start;
     gap: 20px;
-    margin-top: 25px;
-    margin-left: 35px;
+    margin: 0 !important;
   }
 
   .article-quemSou-Formação {
     width: 52vw;
     max-width: 750px;
     height: fit-content;
+    max-height: 190px;
     /*Atenção*/
     background-color: #161D26;
-    font-size: clamp(14px, 1.11vw, 16px);
+    font-size: clamp(10px, 1.11vw, 16px);
     color: white;
     text-align: center;
     border-radius: 32px 0px 32px 0px;
     font-weight: 400;
-
+    overflow: hidden;
   }
 
   .article-quemSou-Formação p {
@@ -2455,9 +2475,12 @@ figure {
   }
 
   .badges-section {
-    max-height: 231px;
+    max-height: 215px;
     overflow-y: auto;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 
   }
 
@@ -2492,7 +2515,7 @@ figure {
     justify-content: space-between;
     flex-direction: column;
     text-align: right;
-    gap: 0px;
+    gap: 5px;
     margin-top: 0px;
     margin-bottom: 0px;
   }
