--- a/css/style.css
+++ b/css/style.css
@@ -828,7 +828,7 @@ header {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: flex-start;
-    margin-top: clamp(50px, 6.94vw, 100px);
+    margin-top: clamp(0px, 3.47vw, 50px);
     gap: 35px;
   }
 
@@ -995,8 +995,11 @@ figcaption {
 
 @media (min-width: 720px) {
   #section-card-projeto-tela-perfil {
-    padding-top: 10vh;
-    margin-left: 4.65vw;
+    padding-top: clamp(0px, 3.47vw, 50px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*margin-left: 4.65vw;*/
   }
 }
 
@@ -1020,10 +1023,9 @@ figcaption {
 
 @media (min-width: 720px) {
   .container-meus-projetos {
-    width: 100%;
+    width: fit-content;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: flex-start;
   }
 }
@@ -1048,7 +1050,7 @@ figcaption {
 
 @media (min-width: 720px) {
   .container-projetos-compartilhados {
-    width: 100%;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1178,12 +1180,10 @@ figcaption {
   .container-card-tela-perfil {
     width: 100%;
     height: 100%;
-    display: grid;
+    display: flex;
+    flex-direction: row;
     justify-content: flex-start;
-    place-items: initial;
-    grid-template-columns: repeat(auto-fit, 21.73vw);
     gap: 13px;
-    padding: 1.95vh 0 6.64vh 0;
   }
 }
 
