card e pagina de perfil finalizado

--- a/css/style.css
+++ b/css/style.css
@@ -2391,6 +2391,10 @@ figure {
     height: 6.87em;
 }
 
+    .foto-usuario {
+        border-radius: 100%;
+    }
+
 /* card perfil do index: corpo do conteudo*/
 .card-index__conteudo {
     max-height: 100%;
