--- a/css/style.css
+++ b/css/style.css
@@ -1002,7 +1002,9 @@ figcaption {
         padding-top: clamp(0px, 3.47vw, 50px);
         display: flex;
         flex-direction: column;
-        align-items: center;
+        width: fit-content;
+        align-items: start;
+        margin: auto;
         /*margin-left: 4.65vw;*/
     }
 }
