--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ header {
 }
 
 .badge-item {
-  border-radius: 6px;
+    border-radius: 6px;
 }
 
 .badge-item,
@@ -431,9 +431,9 @@ header {
 
 .badge-item img,
 .badge-item-img {
-  height: 18.3px;
-  max-width: 100%;
-  border-radius: 6px;
+    height: 18.3px;
+    max-width: 100%;
+    border-radius: 6px;
 }
 
 .level-item {
@@ -1002,7 +1002,9 @@ figcaption {
         padding-top: clamp(0px, 3.47vw, 50px);
         display: flex;
         flex-direction: column;
-        align-items: center;
+        width: fit-content;
+        align-items: start;
+        margin: auto;
         /*margin-left: 4.65vw;*/
     }
 }
